apps/frontend/src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components {
  .page {
    @apply bg-woodsmoke-50 p-2 size-full;
  }
  .to-do-btn {
    @apply flex items-center justify-center size-6 border border-woodsmoke-950 rounded-full text-2xl text-woodsmoke-950;
  }
  .modal-btn {
    @apply flex-1 duration-300 ease-in-out;
  }
  .priority-btn {
    @apply size-8 rounded-lg opacity-0 font-bold animate-move-left-to-right text-woodsmoke-950;
  }
}

.main-layout {
  grid-template-areas:
    "header"
    "main";
  grid-template-columns: 1fr;
  grid-template-rows: 64px calc(100% - 64px);
}

.to-do-page-layout {
  grid-template-areas:
    "td-header"
    "td-task-list";
  grid-template-columns: 1fr;
  grid-template-rows: 64px calc(100% - 64px);
}

/** Main - Grid Area  */
#header {
  grid-area: header;
}
#nav {
  grid-area: nav;
}
#main {
  grid-area: main;
}

/** To Do - Grid Area  */
#td-header {
  grid-area: td-header;
}
#td-filter {
  grid-area: td-filter;
}
#td-task-list {
  grid-area: td-task-list;
}
#td-general {
  grid-area: td-general;
}

@media (min-width: 1024px) {
  .main-layout {
    grid-template-areas:
      "header header header"
      "nav main main"
      "nav main main";
    grid-template-columns: 224px repeat(2, 1fr);
    grid-template-rows: 4rem repeat(2, 1fr);
  }
  .main-layout:has(#nav.closed) {
    grid-template-columns: 32px repeat(2, 1fr);
  }

  .to-do-page-layout {
    grid-template-areas:
      "td-header td-header td-header"
      "td-filter td-task-list td-general";
    grid-template-columns: minmax(240px, 380px) minmax(400px, 1fr) minmax(
        240px,
        380px
      );
    grid-template-rows: 64px 1fr;
    gap: 1rem;
  }
}

